--- a/ListWithFilter.html
+++ b/ListWithFilter.html
@@ -9,9 +9,9 @@
 </head>
 <body ng-controller="myController2">
 
-    {{2+2}}
+    <input type="text" ng-model="search" />
     <ul>
-        <li ng-repeat="item in namesList">{{item}}</li>
+        <li ng-repeat="item in namesList|filter:search">{{item}}</li>
     </ul>
 </body>
 </html>
